create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">build a website for free</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -351,7 +351,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ScsSXM1wLP1suaCF+R2cUJT/gn/MAxHZ8uzrIAKiheKNM28trGoRj687jomjGG/uZnB12ZXR2dvpe2ul1mChFi4B/CEE0kZckEvAu3xLUD0JNI/bJeSqlInpOLNKTSEd" data-form-email="true">
+                        <input type="hidden" value="0vwprUujGCY5NassCbjtTsiblNhJSeIU6Wrs5DG1h2iOqBsfh8btWoefb8aFdSb2xIqE0V0jCogz8cANJxalM1h+MT92CzE1N2DM9Nsn8zPSxDZFDaJv8VsmLIqo+Nlr" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
