--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -262,7 +262,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="QvLtJp7LKCk0hbZ9dDhaWWHHXXwSSpWBoYyWcHqeylVJqqkR9fSdTeoVRwB76zYsb06XNQsPdA3CxAGUR5jvatsi2e6S6ysr+OJDhN4HaBAIF1QhvJavMyQVW1EtoSah" data-form-email="true">
+                        <input type="hidden" value="7C88Ks+iu0wy74CahdMIaLSLg2NmsPgj9luu+b0O8hz7i729rHABYQ0Dr08svmHKtl5R+hThrR32SUs8+yLQKsmi3X0NTEsvRG4sV0RXsXdmsr9a4c4YJ82T1MQ4+yDg" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-22">
                         </div>
