--- a/page7.html
+++ b/page7.html
@@ -70,7 +70,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/e">how to make a site</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="m0X/1HugmBPffkocjoWA1ZygCZ6OstDpVEq4AXq5FwHNyqFMdWW5FRCQSYUiMzLMOGVawbg94Xc2nv9WII8gBn7PW/0Va39oWpBk+B84knlOTuOP3Vu8vhbiYqO7gML1" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C468DxZA+TNrA1G4yb9Qss9MigCPDU3horqiYRGG1SgOCQwb02WDwTlrx3ECQ8QG8nF9892IbuMjc0IXmnocQaaqaQ3Vs4FiWlWX/B/A94QXfOoAbs9aFTHJHBMTj+93" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="UfyGGGz+i94U/6xw2qbLS7fFQRoHEC/P7o7ITo6Hi4Va3bLANqkqg8f5lz88V0StlJAVdPOP1cepWmidTxaWMs2d88BlyIWxRGg4gdv4MASsB0ZvwQBgSfG1vaf8ByRx" data-form-email="true">
+                        <input type="hidden" value="qa1rFk/Qb1SAuUSX4Qo9PGnjKZf4bsgjPrSeeLTo/zKw63vAxVNr05eGl4vNsKN4E4fvVmOIvuYODORWOcJ48OapKCnjJDSI+ktUqTr1sY7KigF7K4Zp2f3Dxs6gDzoh" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
