--- a/page8.html
+++ b/page8.html
@@ -70,7 +70,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="section-table cid-qWypyYQYFT" id="table1-1g">
 
   
   
@@ -249,7 +249,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form! </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1y+PiH6USqz5/Ts6tifDr70MyBzJIk4cTWucOgtYsIw/5rzqQuZT6AHKWWcr6NQeA0NFuqebmh/PgNKsRMNDYKlWPOl3WNwaX665B09oVT1dSYao4o3EEnNwWzBscvKC" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MFDCyZZ/JTR4qhkdU00tUZYRLvlCkXLJMddLgMk0h6cpLygHknb/HcsyCldHCPX9jrv1l6ylY77OAvZ99m1xAL0c13Q9Re98B45fGYIJrHyWrv1KUZ4zPQ1P96ywxSIS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -322,7 +322,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="iPcIOcVur4fgBuoMf5QMHSj56zFOZzdzIs+6AE7jzPrVv9Ia7NZS+jiYnB6k9UiMQ88ZATAspCDIwrJpuBLCgBNHHoaXTxRuXBGaB/GTlCVjznvwoWCz8qNpm5k9xVA3" data-form-email="true">
+                        <input type="hidden" value="6wGVjywVktZo2PDs5KY45Facsbfgxpj5mfrSF9YYPH4/Ltiw3vfOjKwIB6thSQev5v2rIjQ+N7siwhZzkanWPay5vc4J761Bd2CwcG2o4TtgWArOpQoyXdN2wjLw3GtR" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-28">
                         </div>
