--- a/page10.html
+++ b/page10.html
@@ -70,7 +70,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/s">free bootstrap themes</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
+<section class="engine"><a href="https://mobirise.me/r">free bootstrap template</a></section><section class="section-table cid-qWyu7EKNND" id="table1-1r">
 
   
   
@@ -233,7 +233,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DqMbsN3t62uYC4ZPRLlejygnwkKrJE6YjyITSGI2sshqltBBICuqCc2tJipFaPME40HCdYj7EtOFhOxB67/abEDiulNpbz2e2fsZhd/HVrLdpkV+QoUqaaUuUWmNdFtt" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HooFelmt+T7zBgtSt5Rydf3dm/FNEHtPrN+Slm4jf8yFWaiY9Azgpo9lRAuGBEq7NKqLr6TkCw8wye30se315uEUqXwa0W63ZdCMzUE545Yrbv/W4laB329u1Jmcql4r" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -306,7 +306,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="QiOZJAAy5JoqHPBsBD1VY3+mA54lTqHNP4f1Jp8JMPm0wK4oddEXY+Dx7bAcrJAQV6Uq8XeNSJpxOoqwCfS5fmkgOVXqv+wtEDxD+XT6JIczgNc0MpNggRXeykZE5ep4" data-form-email="true">
+                        <input type="hidden" value="WrRTVrPEKi8XMjvNdW6enzQacYchem/gf6I1AyYnS3CeHKfL4MelP1DgPyz7YwjiGYyzua3bnFCtg95PXld4JQRHuhT5LQXalU4fOTegPOlndIhJcH+wrt+5SNsMQ8t+" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-2a">
                         </div>
