--- a/page9.html
+++ b/page9.html
@@ -70,7 +70,7 @@
                         Services
                     </a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content4-2i">
                         Portfolio</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        Colaborate</a></li>
+                        Collaborate</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page3.html">
                         Contact Us</a>
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/p">website templates free download</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
+<section class="engine"><a href="https://mobirise.me/g">how to build a site for free</a></section><section class="section-table cid-qWypRJMRsP" id="table1-1k">
 
   
   
@@ -234,7 +234,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bYFJvU7WQyak8Vzsb2eiuzAMAXGznU86rrJTTP/Q/nSXIvz4+Gl6hbNMLSMe0UEZ27pvWvrVr5Vu70FT9TpU+SglNUl9o/Wi9hi1ipQRJODIwPmc96A70lado+b9lGqB" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="r0+O+ckna9kTePGfIK2k9p3ObGhpQJ4hOU4KgAL+IJhG0ZmF4ghUctY4jDMFUgS1RbYYlKWDCiSwfKVYCjUkLvoVH0yP51InZBTSxZIoIFyOiQMHTkUIuA4Nx1n3gk+j" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -307,7 +307,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="ir8Qn6e/scpznwxgZEN5zabkP4swZIMhk9qU6mgDklrsih8EbNYObpHjtIHwa0DzX+Z7KazVJ+6jMM1HlESw8Dh2g7nwvaSE7ZxL08SezFytpBC7FtA4yRjB/p83xCc5" data-form-email="true">
+                        <input type="hidden" value="CJnwEeS9ESyxSxKOVeMb1l3IxWzLuDqph3xLW0ESh0Lk5MtCM6KL0N8ZN0L1+yL+UWUVtVVDzyxDg+HkUTA84scWCYTQEwrUiPgy0dWkYhvc1mZMHUqMLbL77OEnVhH6" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-29">
                         </div>
