create github pages

--- a/page1.html
+++ b/page1.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/e">make a site for free</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
+<section class="engine"><a href="https://mobirise.me/o">one page web templates</a></section><section class="mbr-section content4 cid-qWsLarH3LH" id="content4-k">
 
     
 
@@ -262,7 +262,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="7C88Ks+iu0wy74CahdMIaLSLg2NmsPgj9luu+b0O8hz7i729rHABYQ0Dr08svmHKtl5R+hThrR32SUs8+yLQKsmi3X0NTEsvRG4sV0RXsXdmsr9a4c4YJ82T1MQ4+yDg" data-form-email="true">
+                        <input type="hidden" value="B4ACyCebSSgps1lgowOMHOjECUzHmsKIvgs1ipQ+4+NSnPvTmV8QaL0EfLKNSB+zTjj1HZn4p0xbLbzmg5PSaGlIUWgTFj6jDvf3rPtYLy4JvKKwpHrNx2sBfmhrwSS6" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-22">
                         </div>
