--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/j">website templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="C468DxZA+TNrA1G4yb9Qss9MigCPDU3horqiYRGG1SgOCQwb02WDwTlrx3ECQ8QG8nF9892IbuMjc0IXmnocQaaqaQ3Vs4FiWlWX/B/A94QXfOoAbs9aFTHJHBMTj+93" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zOzrM1b1GXx4K/9thSUL2f6AmP+OAx3lJ6oPLg/IXm/emZlwTbx+tTqPVKTRHgyg7sc63GVnDJPvamOoQMguFOgt7ZNdufEF3kwCsVbD/AOtAKEDCbhgR8W2rS1+6JPJ" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="qa1rFk/Qb1SAuUSX4Qo9PGnjKZf4bsgjPrSeeLTo/zKw63vAxVNr05eGl4vNsKN4E4fvVmOIvuYODORWOcJ48OapKCnjJDSI+ktUqTr1sY7KigF7K4Zp2f3Dxs6gDzoh" data-form-email="true">
+                        <input type="hidden" value="3UYUBPeJrWHURdkm43iAkQVCMJ0+wB3cWQUxbEWrel0y+9cOosqx4YgUVn/jl61KOBiJhhTQCWe0aGXnwHL9dTK137ulUQaGCcQVFS5Cjxhu29zK7izeyd8MdCPOykBp" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
