create github pages

--- a/page7.html
+++ b/page7.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
+<section class="engine"><a href="https://mobirise.me/i">web creation software</a></section><section class="section-table cid-qWykKOWa0P" id="table1-1c">
 
   
   
@@ -237,7 +237,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zOzrM1b1GXx4K/9thSUL2f6AmP+OAx3lJ6oPLg/IXm/emZlwTbx+tTqPVKTRHgyg7sc63GVnDJPvamOoQMguFOgt7ZNdufEF3kwCsVbD/AOtAKEDCbhgR8W2rS1+6JPJ" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6E2JXskpJ+51xABk6wb7luO7WOZWaXwCmS0U1J8QbhZijDQqwzVHHp7VvzbgTUJIJroC2ULW0aYCDCzBIhvnH22vgPlNB1b58bSN0xODOB/9V4vz2E/6dZT+2Ul2u/5Z" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -310,7 +310,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="3UYUBPeJrWHURdkm43iAkQVCMJ0+wB3cWQUxbEWrel0y+9cOosqx4YgUVn/jl61KOBiJhhTQCWe0aGXnwHL9dTK137ulUQaGCcQVFS5Cjxhu29zK7izeyd8MdCPOykBp" data-form-email="true">
+                        <input type="hidden" value="2JN+UXr8L5vQ2w1FEVhySwkxQR9JSC0lDsXPf1ZgHVGpZ7XTIMzRRRl2x7MuXc3sUgFHGhYkXaptJv4iYrfQG0OIbhDoz48WpyoIvAjyMMggqqbJI0qWIKkLeSdAWg2n" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-27">
                         </div>
