--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">site builder</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/e">how to make a site</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -351,7 +351,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="EKfOk6TNGzC6SOW802g6Z6PV2Ov25QDtEvL7y5Dqg4j6knPyVQil6xX8t+IHfWrIDdFUF4Zroxi7vW/KkykO6IbstRA8qNOpyK0PtIbgdT3rxwaSBJ8zRdbn3OAP2bho" data-form-email="true">
+                        <input type="hidden" value="KjygBXU4D6a/hXghbk/eqDS6ACH0tNw52xeFmOI66/N5jFbemIQdjkRfPXyjY9dsiYfyCVH7OHdy6YEIqNiCHt2toGGF0gaTmL/OyMHCv6I+GIQDnUXT9AdSTNEM88v6" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
@@ -376,7 +376,7 @@
                 <div class="col-md-6">
                     <div class="social-list align-right">
                         <div class="soc-item">
-                            <a href="https://twitter.com/mobirisehttps://www.facebook.com/thetarobotics/" target="_blank">
+                            <a href="https://www.facebook.com/thetarobotics/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                             </a>
                         </div>
