--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">how to create a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-qWsMDuzIF0" id="gallery2-p">
+<section class="engine"><a href="https://mobirise.me/r">bootstrap template</a></section><section class="mbr-gallery mbr-slider-carousel cid-qWsMDuzIF0" id="gallery2-p">
 
     
 
@@ -146,7 +146,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="h+4/8f1ZpjgtgsewGuWVKfXFal/M9OD6ivrhxwWxQjAqbuXSexYDZMQVflTulkp6IZL56kETeoQcP1Y/q5tFztEDaa4cM78FiqvFA+QOfgEyjDhDvGL3EuNppDXeKy8Q" data-form-email="true">
+                        <input type="hidden" value="F/Ex+ycq7uWOsWowltLySdmjvHB5o0pB7UEtM2iQOcFM94mWzHwofm5lL7xsXlCUY4VBlkGkyfjy1y/quHYavIMNKf5n0kcmlb4uj/MEjyXMXoPSegEWmD0beNGpzGbS" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-24">
                         </div>
