create github pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/32105038-192968864848463-4043827518682169344-n-122x122.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Theta Robotics</title>
+  <title>Theta Robotics India</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/y">html site templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="carousel slide cid-qWsB5IvWiN" data-interval="false" id="slider1-4">
 
     
 
@@ -350,7 +350,7 @@
                     </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="XWDguYNCTgkujQB/f8G+fWpC2VLhq3tdhcDExJPDmMK3Ni9juKLMfz67tKI3WX0KhdXdFpHYkeQBwzkg/lr5Id7/DHHMttshoS3FZuqxi2mtk+WkxFkdCXOkynDN9GFI" data-form-email="true">
+                        <input type="hidden" value="c9yWtYIR8NJkr8VLQWHg5pOYrI/4XRIUJTAGJoa21wobXwK+xViQ7h6hvyZlRRbemvvYpy5z8grJC7ICbDSHYe8BgTe/sy7VflNcH61EVjzN8P0RQuBIO3TVDuT1xQm0" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email" id="email-footer3-21">
                         </div>
